--- a/CSS-1.css
+++ b/CSS-1.css
@@ -20,8 +20,11 @@ button {
     height: 300px;
     width: 300px;
     margin: 10px auto;
-    
+    box-shadow: 10px;
 }
 p{
     text-align: center
+}
+html{
+    background-color: teal;
 }
